css fix for horisontal spacing btw items in portal - more

--- a/public/stylesheets/newstuff.css
+++ b/public/stylesheets/newstuff.css
@@ -871,3 +871,8 @@ padding-bottom: 0px;
 	margin-left: 5px;
 */
 }
+
+.portlet-content .priority_added
+{
+padding-top: 0px !important
+}
